<resources>
    <string name="app_name">Github Users</string>
    <string name="this_activity">Ini adalah menu activity</string>
    <string name="this_fragment">Ini adalah menu fragment</string>
    <string name="search">Search</string>
    <string name="search_hint">Masukkan kata</string>
    <string name="users_name">Nama User</string>
    <string name="user_username">Username</string>
    <string name="user_name">Nama User</string>
    <string name="user_follower">0 Follower</string>
    <string name="user_following">0 Following</string>
    <string name="tab_text_1">Follower</string>
    <string name="tab_text_2">Following</string>
    <string name="fav_user">Favorite Users</string>
    <string name="setting">Setting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dark_mode">Dark Mode</string>
</resources>