<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:menuCategory="container">
        <item
            android:id="@+id/search"
            android:icon="@drawable/ic_baseline_search_24"
            android:title="@string/search"
            app:actionViewClass="androidx.appcompat.widget.SearchView"
            app:showAsAction="collapseActionView|always" />

        <item
            android:id="@+id/favUsers"
            android:icon="@drawable/ic_favorite_24"
            android:title="@string/fav_user"
            app:showAsAction="collapseActionView|ifRoom" />

        <item
            android:id="@+id/setting"
            android:title="@string/setting"
            />
    </group>
</menu>